--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-image: url('images/background.png');
+    background-size: cover;  
+    background-repeat: no-repeat;
+    background-position: center center; 
     margin: 0;
     padding: 0;
 }
