--- a/index.css
+++ b/index.css
@@ -19,12 +19,24 @@ h1 {
     color: #007BFF;
 }
 
+.logo {
+    border-radius: 12px;
+}
+
 p {
     font-size: 14px;
     margin-bottom: 20px;
 }
 
-.how-it-works, .type-and-absorb {
+.introduction h1 {
+    text-decoration: underline;
+}
+
+.how-it-works strong, .type-and-absorb strong {
+    text-decoration: underline;
+}
+
+.how-it-works, .type-and-absorb, .introduction {
     background-color: #f9f9f9;
     padding: 15px;
     border-radius: 5px;
