--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ p {
 }
 
 textarea {
-    width: 100%;
+    width: 580px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
