--- a/game.css
+++ b/game.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Baloo Paaji 2', sans-serif;
     background-image: url('images/background.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -13,12 +13,10 @@ body {
 }
 
 .container {
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 20px;
+    background-color: transparent;
     padding: 30px;
     width: 80%;
     max-width: 600px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -27,9 +25,30 @@ h1 {
     margin-bottom: 20px;
 }
 
+.stats-bar, .text-box {
+    text-align: left;
+    font-size: large;
+    background-color: #E7FEFF;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #e5fa25;
+    box-shadow: 6px 5px 7px rgb(52, 52, 52);
+    padding: 15px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
 
-input[type="text"], textarea {
-    width: 98%;
+.stats-bar{
+    border-color: #9390FF;
+}
+
+.text-box{
+    border-color: #9390FF;
+}
+
+input[type="text"] {
+    width: 40%;
+    height: 30px;
     padding: 6px;
     border: 2px solid #ccc;
     border-radius: 10px;
@@ -40,6 +59,13 @@ input[type="text"], textarea {
 
 textarea {
     height: 150px;
+    width: 98%;
+    padding: 6px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    transition: border-color 0.3s;
 }
 
 input[type="text"]:focus, textarea:focus {
