--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
 h1 {
     text-align: center;
     color: #007BFF;
+    
 }
 
 .logo {
@@ -41,35 +42,53 @@ p {
     font-weight: bolder;
 }
 
-.how-it-works, .type-and-absorb, .introduction {
+.how-it-works, .type-and-absorb, .introduction, .temp {
     text-align: left;
     font-size: large;
     background-color: #E7FEFF;
     border-style: solid;
-    border-color: #007BFF;
+    border-width: 3px;
+    border-color: #e5fa25;
+    box-shadow: 6px 5px 7px rgb(52, 52, 52);
     padding: 15px;
     border-radius: 20px;
     margin-bottom: 20px;
 }
 
+.how-it-works{
+    border-color: #00C108;
+}
+
+.type-and-absorb{
+    border-color: #FF9FA5;
+}
+
+.introduction{
+    border-color: #6461FF;
+}
+
 .button {
     display: block;
+    font-size: 24px;
     text-align: center;
-    background-color: #007BFF;
-    color: #fff;
+    background-color: #ffffff;
+    border-style: solid;
+    color: #000000;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 20px;
     text-decoration: none;
-    margin: 20px auto;
-    width: 50%;
+    margin: 16px auto;
+    width: 30%;
     font-weight: bold;
+    border-width: 2px;
 }
 
 textarea {
-    width: 580px;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    height: 100px;
+    height: 200px;
     resize: none;
+    box-sizing: border-box;
 }
